# planetMagFields

./: .buildinfo  .gitignore  CITATION.cff  ExploreFieldsInteractively.ipynb  InteractiveMag.py  README.md  __init__.py  api.html  app.py  cli.html  earth_Br.py  examples.html  ganymede_Br.py  genindex.html  index.html  installation.html  jupiter_Br.py  jupyter.html  libgauss.py  magField.py  math.html  mercury_Br.py  models.html  neptune_Br.py  objects.inv  packages.txt  paper.md  planet.py  plotlib.py  potextra.py  prereq.html  projections.html  py-modindex.html  pyproject.toml  requirements.txt  saturn_Br.py  search.html  searchindex.js  setup.py  uranus_Br.py
.doctrees/: api.doctree  cli.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  jupyter.doctree  math.doctree  models.doctree  prereq.doctree  projections.doctree
.github/workflows/: documentation.yml  main.yml  publish-pypi.yml
_modules/: index.html
_modules/planetmagfields/: planet.html  potextra.html  utils.html
_sources/: api.rst.txt  cli.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  jupyter.rst.txt  models.rst.txt  prereq.rst.txt  projections.rst.txt
_static/: copybutton.js
doc/: api.rst  conf.py  examples.rst  index.rst  installation.rst  jupyter.rst  math.rst  models.rst  prereq.rst  projections.rst
paper/: paper.bib  paper.md
planetMagFields/: libbfield.py  planet.py  plotlib.py
planetMagFields/images/3d/: 3dField.pvsm
planetmagfields/: __init__.py  cli.py  config.json  lib3d.py  libbfield.py  libdata.py  libgauss.py  planet.py  plot3d.py  plotlib.py  potextra.py  utils.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/data/: coastlines_110m.npz  coastlines_50m.npz  model_info.json
streamlit_app/pages/: 3d_explorer.py  orbit_trajectory.py
test/: planetmagtest.py
test/earth/: testfig.py  unitTest.py
test/jupiter/: unitTest.py
tests/: test_3d.py  test_earthBr.py  test_filt.py  test_planetBr.py  test_potextra.py  test_read.py  test_vtk.py
tests/earth/: testfig.py
tests/jupiter/: testfig.py
