[project]
name = "planetMagFields"
version = "1.5.8"
authors = [
  { name="Ankit Barik", email="ankit.barik@gmail.com" },
]
maintainers = [
  { name="Ankit Barik", email="ankit.barik@gmail.com" },
  { name="Regupathi Angappan", email="rangapp1@jhu.edu" },
]
description = "Routines to easily access information about magnetic fields of planets in our solar system and visualize them in both 2D and 3D"
keywords = ['Spherical Harmonics','Planetary Science','Spectra','Magnetic Field','Visualization','3D visualization']
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.optional-dependencies]

map = ["cartopy"]
potextra=["shtns"]
vtk=["pyevtk"]
all=["planetMagFields[map,potextra,vtk]"]

[project.urls]
Homepage = "https://ankitbarik.github.io/planetMagFields/"
Issues = "https://github.com/AnkitBarik/planetMagFields/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
